# dev_toolsets

./: .clang-format  .gitignore  README.md  build.sh  env.sh  system_init.sh
apps/onnx/: README.md  ori_tf_test.py
apps/onnx/custom_op/: CMakeLists.txt  README.md  pytorch_custom_op_test.py  tf_custom_op_test.py
apps/onnx/custom_op/src/: custom_op_library.cc  custom_op_library.h
apps/onnx/tf_custom_op/: CMakeLists.txt  custom_op_test.py
apps/onnx/tf_custom_op/src/: custom_op_library.cc
apps/onnx/tf_custom_op_example/: custom_op_test.py  tutorial.py
apps/onnx/tf_custom_op_example/src/: custom_op_library.cc
apps/prof_performance/: .gitignore  cpufp.md
apps/pytorch/custom_op_example/: .gitignore  CMakeLists.txt  README.md  test.py
apps/pytorch/custom_op_example/src/: torch_custom_op.cc
apps/tensorflow/: tf_utils.py
apps/tensorflow/custom_op_example/: CMakeLists.txt  README.md  test.py
apps/tensorflow/custom_op_example/src/: tf_custom_op.cc
apps/tensorflow_1/: graphdef_builder.py  tf_utils.py
apps/tensorflow_1/custom_op_example/: .gitignore  CMakeLists.txt  test.py
apps/tensorflow_1/custom_op_example/src/: tf_custom_op.cc
coding/python/: basic_main.py  mp_condition.py  utils.py
conda/: clean.sh  miniconda_install.sh
dev/cmake/: build_cmake.sh
dev/conda/: .gitignore  miniconda_install.sh
dev/cuda/: .gitignore  README.md  cuda_install.sh
dev/gcc/: .gitignore
dev/gperftools/: .gitignore  build_gperftools.sh
dev/onednn/: .gitignore  build_onednn.sh  clean.sh
dl/tensorflow/: tf_utils.py
gcc/: build_gcc.sh  clean.sh
llvm/: .gitignore  build_llvm.sh  clean.sh
python/: utils.py
shell/: .gitignore  README.md  fzf_install.sh  miniconda_install.sh  ohmyzsh_install.sh  set_locale.sh  tmux.conf
source/: conda_replace.sh  condarc  mac_homebrew_replace.sh  pypi_replace.sh
system/: centos_install_basic.sh
